<resources>
    <string name="app_name">Green House</string>
    <string name="header1Intro">Introduction</string>
    <string name="t1IntroText">The release of Carbon Dioxide from human activity is having a profound effect on the climate by increasing the energy in the atmosphere. This additional energy results in increasing average temperatures, extreme weather, like more intense storm; more frequent and intense tornados; stronger hurricanes and expanded hurricane seasons; and more severe droughts and flooding; loss of ice caps and glaziers; and rising sea levels. These changes in climate impact human activity and the Earth\'s ecosystem generally negatively. The Green House application describes five simple ways to reduce the carbon footprint of a home to help reduce the impact on the climate.</string>
    <string name="header2HeatingCooling">Heating and Cooling</string>
    <string name="t2HeatCollText">Heating and cooling our homes consumes the majority of the total energy consumed in the home. Installing a programmable thermostat and setting it for lower temperatures at night will help reduce energy consumption by 10% according to Energy.gov.\n\nDuring warm weather, Air Conditioning (AC) is the next major energy consumer. Upgrade AC to the most efficient system available when possible. Use the circuit breaker to deactivate the AC unit during non-seasonal use. Even newer AC units can consume significant power in standby.</string>
    <string name="t2NotesText"><![CDATA[Notes&#58;<br>Spacing heating accounts for 45&#37; of home energy consumption and 6&#37; to 25&#37; for space cooling depending on location. Energy.gov estimates that programmable thermostats save 5&#37; to 15&#37; on your energy bill yearly. The energy savings from heating can be 1&#37; per degree for setback periods of 8 hours or more. A 10 degree setback overnight would reduce energy consumption by 10&#37; per year. When the thermostat is set back, the home loses energy more slowly. The longer the home is at a lower temperature the amount of energy lost is lower so more energy is saved. Natural gas is methane &#040;CH4&#041; and burning it produces 5.4 kg &#040;11.7 lbs&#041; of CO2 per therm. A therm is 100 cubic feet of natural gas and has the heat energy of 100,000 BTUs &#040;29.3 kWh&#041;. CO2 emissions from electricity range for 0.006 lbs&#47;kWh in Vermont to 2.07 lbs&#47;kWh in North Dakota depending on the fuel sources used. The national average is 1.52 lbs&#47;kWh.]]></string>
    <string name="t2ReferencesText"><![CDATA[References&#58;<br><a href="http://energy.gov/energysaver/thermostats">"Energy.gov Thermostats"</a><br><a href="https://www.eia.gov/environment/emissions/co2_vol_mass.cfm">US EIA CO2 Coefficients by fuel</a><br><a href="https://www.epa.gov/energy/greenhouse-gas-equivalencies-calculator">EPA Greenhouse Gas Equivalencies Calculator</a><br><a href="https://www.epa.gov/energy/power-profiler">EPA Power Profiler</a><br><a href="https://www.epa.gov/energy/ghg-equivalencies-calculator-calculations-and-references">EPA GHG Equivalencies Calculator</a><br><a href="http://www.eia.gov/consumption/residential/reports/2009/state_briefs/">EIA Residential Energy Consumption Survey</a><br>]]></string>
    <string name="header3HotWater">Hot Water</string>
    <string name="t3HotWaterText">Heating hot water consumes 14\%% to 18\%% of the energy in the home, so saving on hot water saves both water and energy. To lower hot water energy usage, measure the hot water temperature with a cooking thermometer and lower the hot water heater temperature to 130 &#176;F. Install flow limiters on faucets and shower heads, and reduce shower time to reduce hot water usage.</string>
    <string name="t3NotesText"><![CDATA[Notes&#58;<br>Heating water accounts for 14&#37; to 17&#37; of the home energy consumption. 64 gallons of hot water are used daily on average in the USA. Most hot water heaters are set at 140 &#176;F as the default setting. Every 10 &#176;F reduction in temperature can reduce energy use by 3&#37; to 5&#37;. In most cases, setting the hot water heater to 120 &#176;F is recommended, and 130 &#176;F is used when required by the dishwasher or to kill off bacteria in the hot water heater. For a 85&#37; efficient natural gas hot water heater, it takes 46,871 BTUs (13.7 kWh) to raise 64 gallons of water from 55 &#176;F to 130 &#176;F which generates 5.5 lbs of CO2 each day and 2002 lbs&#47;year. This 10 &#176;F temperature reduction reduces CO2 emissions by 267 lbs&#47;year. This savings does not include the energy needed to hold the water at the lower set temperature.]]></string>
    <string name="t3ReferencesText"><![CDATA[References&#58;<br><a href="http://energy.gov/energysaver/projects/savings-project-lower-water-heating-temperature">"Energy.gov lowering water heating temperature"</a><br><a href="http://energy.gov/articles/askenergysaver-home-water-heating">Energy.gov home water heating</a><br><a href="http://energy.gov/articles/new-infographic-and-projects-keep-your-energy-bills-out-hot-water">Energy.gov Energy Savers 101 Everything you needed to know about Water Heaters</a><br>]]></string>
    <string name="header4Appliances">Appliances</string>
    <string name="t4ApplianceText"><![CDATA[Appliance consumes 35\%% to 43\%% of the energy in the home. Set the washing machine to use the least amount of water possible and lowest temperature for a load of laundry. In warm climates or warmer season where the ground water temperature is warm enough to dissolve soap, use the cold/cold wash-rinse cycles. For the dryer, use the humidity sensors and the lowest heat setting possible to minimize drying time. Clean the lint tray in the dryer and exhaust pipe regularly. For the dishwasher, use the watermizer and no heat dry settings. Run appliances off peak.]]></string>
    <string name="t4NotesText"><![CDATA[Notes:&#58;<br>Electrical appliances, electronics, and lighting consume up 35\%% to 43\%% of the home energy. Electricity consumption is measured in kilowatt hours (kWh). A 1000 W hair dryer running for an hour would consume 1 kWh, for example. A kWh produces between 0.6 lbs/CO2 to 2.07 lbs&#47;kWh depending on location. Every kWh saved keeps 1.5 lbs of CO2 from being emitted into the atmosphere on average. Generally, peak electricity demand occurs from 6 AM to 10 AM and 5 PM to 8 PM in the winter and between 4 PM and 8 PM in the summer. The cost of electricity can be 2 to 3 times more during peak demand time. Running appliances off-peak also helps reduces the need to employ low efficient energy generators to meet peak demand by the energy companies.]]></string>
    <string name="t4ReferencesText"><![CDATA[References&#58;<br><a href="https://www3.epa.gov/carbon-footprint-calculator/">EPA Carbon Footprint Calculator</a><br><a href="https://www.epa.gov/energy/egrid">EPA eGRID</a><br>]]></string>
    <string name="header5Insulation">Insulation</string>
    <string name="t5InsulationText">Insulating and sealing to stop air from recirculating between the attic and basement can reduce heat loss of a home significantly. Many types of insulation are available that include fiberglass, foam, and cellulose. Also, don\'t forget to seal the fireplace chimney to prevent heat loss.\n\nA professional home energy audit will determine that best way to improve the energy efficiency of a home. Find a professional auditor at energystar.gov, and check your state for accredited auditors, incentives, and tax credits. State and Federal incentive programs may pay for a large part of the energy related improvement to a home.</string>
    <string name="t5NotesText"><![CDATA[Notes&#58;<br>Insulating and sealing a home reduces energy consumption by 5&#37; to 20&#37;. Insulation increases the R-value of the home which slows the heat flow in and out of the house. Heat and cooling loss can occur from air circulation from the attic to basement, or from air leaks. Sealing slows the loss of warm or cool air making the heating and cooling systems more efficient so less energy is consumed. A home energy audit identifies the optimum method to save energy and determines cost effective improvements. Many states have rebates and incentive programs that pay for a major portion of an energy audit and energy upgrades.]]></string>
    <string name="t5ReferencesText"><![CDATA[References&#58;<br><a href="https://www.energystar.gov/index.cfm?c=home_sealing.hm_improvement_methodology">Energy Star Methodology for Estimated Energy Savings from Cost-Effective Air Sealing and Insulating</a><br><a href="https://www.energystar.gov/index.cfm?c=home_sealing.hm_improvement_sealing">Energy Star Why Seal and Insulate</a><br><a href="http://energy.gov/public-services/homes/home-weatherization/home-energy-audits">Energy.gov Home Energy Audits</a><br>
<a href="http://energy.gov/articles/energy-saver-101-infographic-home-energy-audits">Energy.gov Energy Saver 101: Home Energy. Audits</a><br><a href="http://www.resnet.us/directory/search">Find a RESNET professional auditor</a><br><a href="http://energy.gov/eere/femp/energy-incentive-programs">Energy.gov Energy Incentive Programs</a><br>]]></string>
    <string name="header6Electricity">Electricity Generation Supplier</string>
    <string name="t6ElectricPowerText">Electricity companies generate and distribute electricity. Many electricity companies have customer choice programs that let you select a third party electricity generation supplier. JCP &amp; L, for example, provides a list of 83 electricity generation companies to choose from. Select an electricity generation supplier that uses the highest percentage of renewable energy sources to generate electricity. The lower cost electricity supplier will likely not have the cleanest electricity supply because oil, gas, and coal are heavily subsidized.\n\nPhoto credit Topaz Solar Farm (550 MW) by NASA Jan 2, 2015.</string>
    <string name="t6NotesText"><![CDATA[Notes&#58;<br>Green power refers to electricity generated from renewable sources like solar, wind, geothermal, hydropower, biomass, ocean, and hydrogen. Retail electricity competition if available in your state allows you to purchase electricity from alternate suppliers many of which offer electricity generated from renewable sources. To cover the costs of acquiring renewable energy sources, there is a  small cost premium added that ranges from 0.09 cents&#47;kWh to 11 cents&#47;kWh. The residential cost of electricity ranges from 9.14 cents&#47;kWh to 26.92 cents&#47;kWh depending on location.]]></string>
    <string name="t6ReferencesText"><![CDATA[References&#58;<br><a href="https://www.eia.gov/state/maps.cfm?src=home-f3">EIA IS Energy Mapping System</a><br><a href="http://apps3.eere.energy.gov/greenpower/buying/buying_power.shtml">"Energy.gov Can I Buy Green Power in My State?"</a><br><a href="http://energy.gov/eere/femp/energy-incentive-programs">"Energy.gov Energy Incentive Programs"</a><br><a href="https://www.firstenergycorp.com/customer_choice.html">JCP&amp;L Customer Choice</a><br><a href="https://www.eia.gov/electricity/monthly/epm_table_grapher.cfm?t=epmt_5_6_a">EIA Electric Power Monthly</a><br>]]></string>
    <string name="header7summary">Summary</string>
    <string name="buttonNext">Next</string>
    <string name="buttonBack">Back</string>
    <string name="blankText"> </string>
</resources>