<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.p_brane.greenhouse.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/section2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/headerTheme"
                android:text="@string/header2HeatingCooling" />

            <ImageView
                style="@style/photoTheme"
                android:scaleType="fitCenter"
                android:src="@drawable/heating_cooling2" />

            <TextView
                style="@style/bodyTextTheme"
                android:text="@string/t2HeatCollText" />

            <TextView
                android:id="@+id/s2Notes"
                style="@style/notesTextTheme"
                android:text="@string/blankText" />

            <TextView
                android:id="@+id/s2Refs"
                style="@style/refTextTheme"
                android:text="@string/blankText" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/section2">

            <Button
                android:id="@+id/b2Back"
                style="@style/buttonTheme"
                android:layout_alignParentLeft="true"
                android:onClick="openPage1"
                android:text="@string/buttonBack" />

            <Button
                android:id="@+id/b2Next"
                style="@style/buttonTheme"
                android:layout_alignParentRight="true"
                android:onClick="openPage3"
                android:text="@string/buttonNext" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
