<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.p_brane.greenhouse.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/section3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/headerTheme"
                android:text="@string/header3HotWater" />

            <ImageView
                style="@style/photoTheme"
                android:paddingLeft="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/waterheater3" />

            <TextView
                style="@style/bodyTextTheme"
                android:text="@string/t3HotWaterText" />

            <TextView
                android:id="@+id/s3Notes"
                style="@style/notesTextTheme"
                android:text="@string/blankText" />

            <TextView
                android:id="@+id/s3Refs"
                style="@style/refTextTheme"
                android:text="@string/blankText" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/section3">

            <Button
                android:id="@+id/b3Back"
                style="@style/buttonTheme"
                android:layout_alignParentLeft="true"
                android:text="@string/buttonBack"
                android:onClick="openPage2"/>

            <Button
                android:id="@+id/b3Next"
                style="@style/buttonTheme"
                android:layout_alignParentRight="true"
                android:text="@string/buttonNext"
                android:onClick="openPage4"/>
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
